--- a/Practice/assets/css/cart.css
+++ b/Practice/assets/css/cart.css
@@ -1,14 +1,15 @@
 img{
-    width: 100px;
-    height: 100px;
-    /* object-fit: cover; */
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
-/* .size{
+.size{
     width: 400px;
     height: 400px;
-} */
+}
 .cart{
 margin-right: 20px;
+
 }
 .cart i{
     font-size: 30px;
