--- a/Basket/assets/css/cart.css
+++ b/Basket/assets/css/cart.css
@@ -20,3 +20,18 @@
     width: 100px;
     height: 100px;
  }
+ tbody input{
+    width: 30px;
+    height: 20px;
+    border: 1px solid black;
+ }
+ tbody button{
+    border: none;
+ }
+ tbody .delete-item{
+   padding: 0 10px;
+    background-color: red;
+    color:white;
+    border-radius: 5px;
+    
+ }
