--- a/Basket/assets/css/cart.css
+++ b/Basket/assets/css/cart.css
@@ -29,9 +29,10 @@
     border: none;
  }
  tbody .delete-item{
-   padding: 0 10px;
+   padding: 3px 10px;
     background-color: red;
     color:white;
     border-radius: 5px;
     
  }
+ 
